# CapturingReality

HDR/: CMakeLists.txt  hdr.py
HDR/data/: hdr_out.exr  max.hdrgen  max0.ppm  max13.ppm
HDR/src/: HDR.cpp  HDR.h  Tonemap.cpp  Tonemap.h
